# cpp-ray-tracer

./: CMakeLists.txt  README.md
include/: Color.h  Interval.h  Material.h  Object.h  Ray.h  Scene.h  Scene_single_threaded.h  Utils.h  Vec3.h  stb_image_write.h
src/: main.cpp
